# matrixes

./: Cargo.toml  LICENSE  README.md
benches/: bench.rs  constructors.rs  getters.rs  mut_getters.rs  swappers.rs
src/: accessors.rs  constructors.rs  errors.rs  getters.rs  iter.rs  lib.rs  maths.rs  mut_getters.rs  serde.rs  swappers.rs  test.rs  traits.rs  transformers.rs
src/tests/: constructors.rs  derivers.rs  getters.rs  mod.rs  mut_getters.rs  operations.rs  swappers.rs  traits.rs
tests/: accessors.rs  serde.rs
